--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-evolution-tab/pokemon-evolution-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-evolution-tab/pokemon-evolution-tab.component.scss
@@ -22,15 +22,34 @@ p
   text-transform: uppercase;
 }
 
-.evolutionBox .requirement
+.evolutionBox .requirementBox
 {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.evolutionBox .requirement .imgBx img
+.evolutionBox .requirementBox .imgBx img
 {
   width: 50px;
   margin: auto;
   display: block;
+}
+.evolutionBox .requirementBox .requirementList
+{
+   padding: 2px;
+}
+.evolutionBox .requirementBox .requirementList .requirementListItem
+{
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  padding: 5px 10px;
+  border-radius: 15px;
+  background: rgba(83,83,83,.2);
+  border-left: 1px px solid rgba(83,83,83,.5);
+  -webkit-backdrop-filter: blur(5px);
+}
+.evolutionBox .requirementBox .requirementList .requirementListItem p
+{
+  margin: auto;
 }
