--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-evolution-tab/pokemon-evolution-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-evolution-tab/pokemon-evolution-tab.component.scss
@@ -27,6 +27,7 @@ p
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 10%;
 }
 .evolutionBox .requirementBox .imgBx img
 {
