--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.html
@@ -37,10 +37,10 @@
 <div class="genderBox">
   <div class="maleBox">
     <h2>Male</h2>
-    <p>{{getPokemonMaleRate()}} %</p>
+    <p>{{getPokemonMaleRate()}}</p>
   </div>
   <div class="femaleBox">
     <h2>Female</h2>
-    <p>{{getPokemonFemaleRate()}} %</p>
+    <p>{{getPokemonFemaleRate()}}</p>
   </div>
 </div>
