--- a/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.scss
@@ -78,6 +78,12 @@ $white: #F5F5F5;
 
 @media (max-width: 1000px)
 {
+
+  .pokemonListItems
+  {
+    //padding: 0;
+  }
+
   .card
   {
     //TODO PHONE ONLY
