--- a/pokedex/src/app/pokedex/pokedex.component.scss
+++ b/pokedex/src/app/pokedex/pokedex.component.scss
@@ -217,4 +217,11 @@ $white: #F5F5F5;
     padding-bottom: 1em;
   }
 
+  .pokemonListItems
+  {
+    padding: 0;
+    padding-top: 17em;
+    padding-bottom: 1em;
+  }
+
 }
