correction sprite quand les pokemons n'ont pas tous leurs sprite dispo

--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.html
@@ -12,23 +12,23 @@
     <p>{{getPokemonWeight()}} kg</p>
   </div>
 </div>
-<div class="spritesBox">
+<div class="spritesBox" *ngIf="pokemon.sprites.front_default">
   <div class="normalSpriteBox">
     <div class="spriteBox">
       <div class="imgBx"><img src="{{pokemon.sprites.front_default}}" alt="front_default"></div>
       <h3>Front sprite</h3>
     </div>
-    <div class="spriteBox">
+    <div class="spriteBox" *ngIf="pokemon.sprites.back_default">
       <div class="imgBx"><img src="{{pokemon.sprites.back_default}}" alt="back_default"></div>
       <h3>Back sprite</h3>
     </div>
   </div>
-  <div class="shinySpriteBox">
+  <div class="shinySpriteBox" *ngIf="pokemon.sprites.front_shiny">
     <div class="spriteBox">
       <div class="imgBx"><img src="{{pokemon.sprites.front_shiny}}" alt="front_shiny"></div>
       <h3>Shiny front sprite</h3>
     </div>
-    <div class="spriteBox">
+    <div class="spriteBox" *ngIf="pokemon.sprites.back_shiny">
       <div class="imgBx"><img src="{{pokemon.sprites.back_shiny}}" alt="back_shiny"></div>
       <h3>Shiny back sprite</h3>
     </div>
