--- a/pokedex/src/app/pokedex/pokedex.component.html
+++ b/pokedex/src/app/pokedex/pokedex.component.html
@@ -2,7 +2,7 @@
   <div class="search">
     <h1>Pokedex</h1>
     <p>Search for Pokemon by name.</p>
-    <input (keyup)="onKey($event)" class="bar">
+    <input (keyup)="onKey($event)" class="bar" (ngSubmit)="onKey($event)">
     <label class="checkboxContainer">
       <input type="checkbox" class="checkbox" [checked]="listDisplay" (change)="listDisplay = !listDisplay">
       <span></span>
