--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -67,6 +67,7 @@ $water    : #4BC9FF;
     opacity: 0.5;
 }
 .backgroundColor.bug{background: $bug;}.backgroundColor.dark{background: $dark;}.backgroundColor.dragon{background: $dragon;}.backgroundColor.electric{background: $electric;}.backgroundColor.fairy{background: $fairy;}.backgroundColor.fighting{background: $fighting;}.backgroundColor.fire{background: $fire;}.backgroundColor.flying{background: $flying;}.backgroundColor.ghost{background: $ghost;}.backgroundColor.grass{background: $grass;}.backgroundColor.ground{background: $ground;}.backgroundColor.ice{background: $ice;}.backgroundColor.normal{background: $normal;}.backgroundColor.poison{background: $poison;}.backgroundColor.psychic{background: $psychic;}.backgroundColor.rock{background: $rock;}.backgroundColor.steel{background: $steel;}.backgroundColor.water{background: $water;}
+.borderTopColor.bug{border-top: 5px solid $bug;}.borderTopColor.dark{border-top: 5px solid $dark;}.borderTopColor.dragon{border-top: 5px solid $dragon;}.borderTopColor.electric{border-top: 5px solid $electric;}.borderTopColor.fairy{border-top: 5px solid $fairy;}.borderTopColor.fighting{border-top: 5px solid $fighting;}.borderTopColor.fire{border-top: 5px solid $fire;}.borderTopColor.flying{border-top: 5px solid $flying;}.borderTopColor.ghost{border-top: 5px solid $ghost;}.borderTopColor.grass{border-top: 5px solid $grass;}.borderTopColor.ground{border-top: 5px solid $ground;}.borderTopColor.ice{border-top: 5px solid $ice;}.borderTopColor.normal{border-top: 5px solid $normal;}.borderTopColor.poison{border-top: 5px solid $poison;}.borderTopColor.psychic{border-top: 5px solid $psychic;}.borderTopColor.rock{border-top: 5px solid $rock;}.borderTopColor.steel{border-top: 5px solid $steel;}.borderTopColor.water{border-top: 5px solid $water;}
 
 /* The Close Button */
 .close {
@@ -93,12 +94,11 @@ $water    : #4BC9FF;
   overflow: auto; /* Enable scroll if needed */
 
   height:100vh;
-    margin: auto;
-    width: 30rem;
-    max-width: 100%;
-    position: absolute;
-    top: 0;left: 0;right: 0;
-
+  margin: auto;
+  width: 30rem;
+  max-width: 100%;
+  position: absolute;
+  top: 0;left: 0;right: 0;
 
   //remove scrollbar
   -ms-overflow-style: none;  /* IE and Edge */
@@ -125,14 +125,15 @@ $water    : #4BC9FF;
   bottom: 0;
   min-height: 78vh;
   box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
-  border-radius: 15px;
+  //border-radius: 15px;
   background: rgba(245, 245, 245, 0.2);
   display: flex;
   flex-direction: column;
   //align-items: center;
-  border-top: 1px solid rgba(245, 245, 245, 0.5);
-  border-left: 1px solid rgba(245, 245, 245, 0.5);
+  //border-top: 1px solid rgba(245, 245, 245, 0.5);
+  //border-left: 1px solid rgba(245, 245, 245, 0.5);
   backdrop-filter: blur(5px);
+  border-radius: 0 15px 15px 15px;
 }
 
 .content .infos .title
@@ -145,7 +146,6 @@ $water    : #4BC9FF;
 //Pokemon name
 .content .infos .title .nameBox
 {
-  //background: $electric;
   border-radius: 0 50px 50px 0;
   width: fit-content;
   min-width: 40%;
@@ -157,16 +157,18 @@ $water    : #4BC9FF;
 
 .content .infos .title .nameBox h1
 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 600;
   text-transform: uppercase;
   text-align: center;
 }
 
 //Pokemon ID
-.content .infos .title>h1
+.content .infos .title>p
 {
-  margin: 5px 20px;
+  font-size: 1.2rem;
+  font-weight: 100;
+  margin: 10px 25px;
   width: 100%;
   text-align: end;
 }
@@ -186,11 +188,11 @@ $water    : #4BC9FF;
   min-width: 5rem;
   text-align: center;
 }
-.typeBox .type h1
+.typeBox .type p
 {
   margin: 0;
-  font-size: 1.3em;
-  font-weight: 450;
+  font-size: 1.1em;
+  font-weight: 600;
   line-height: 24px;
   text-transform: uppercase;
 }
