--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-move-tab/pokemon-move-tab.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-move-tab/pokemon-move-tab.component.html
@@ -1,4 +1,12 @@
-<h2>Title for moves</h2>
-<p>
-  Somes informations about moves
-</p>
+<div class="container" *ngFor="let move of pokemon.moves">
+  <div class="moveListItem">
+    <p>{{move.move.name}}</p>
+    <p>Lvl : {{move.version_group_details[move.version_group_details.length-1].level_learned_at}}</p>
+    <p>Method : {{move.version_group_details[move.version_group_details.length-1].move_learn_method.name}}</p>
+    <!--img [src]="pokemon.front_default" alt="{{pokemon.name}}">
+    <div class="pokemonListDetail">
+      <h2>{{pokemon.name | titlecase}}</h2>
+      <p>#{{pokemon.id}}</p>
+    </div-->
+  </div>
+</div>
