--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.html
@@ -1,59 +1,78 @@
-<div class="stats">
-  <h2>Statistics</h2>
-  <div class="stats-container">
-    <div class="stats-wrapper">
-      <h3>HP</h3>
-      <h3>{{pokemon.stats[0].base_stat}}</h3>
-      <div class="progressBar">
-        <div class="percent">
-          <div class="progress backgroundColor" style="width: {{pokemon.stats[0].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+<div class="statsContent">
+  <div class="stats">
+    <h1 class="color" [ngClass]="pokemon.types[0].type.name">STATS</h1>
+    <div class="stats-container">
+      <div class="stats-wrapper">
+        <h3>HP</h3>
+        <h3>{{pokemon.stats[0].base_stat}}</h3>
+        <div class="progressBar">
+          <div class="percent">
+            <div class="progress backgroundColor" style="width: {{pokemon.stats[0].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="stats-wrapper">
-      <h3>ATK</h3>
-      <h3>{{pokemon.stats[1].base_stat}}</h3>
-      <div class="progressBar">
-        <div class="percent">
-          <div class="progress backgroundColor" style="width: {{pokemon.stats[1].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+      <div class="stats-wrapper">
+        <h3>ATK</h3>
+        <h3>{{pokemon.stats[1].base_stat}}</h3>
+        <div class="progressBar">
+          <div class="percent">
+            <div class="progress backgroundColor" style="width: {{pokemon.stats[1].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="stats-wrapper">
-      <h3>DEF</h3>
-      <h3>{{pokemon.stats[2].base_stat}}</h3>
-      <div class="progressBar">
-        <div class="percent">
-          <div class="progress backgroundColor" style="width: {{pokemon.stats[2].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+      <div class="stats-wrapper">
+        <h3>DEF</h3>
+        <h3>{{pokemon.stats[2].base_stat}}</h3>
+        <div class="progressBar">
+          <div class="percent">
+            <div class="progress backgroundColor" style="width: {{pokemon.stats[2].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="stats-wrapper">
-      <h3>SATK</h3>
-      <h3>{{pokemon.stats[3].base_stat}}</h3>
-      <div class="progressBar">
-        <div class="percent">
-          <div class="progress backgroundColor" style="width: {{pokemon.stats[3].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+      <div class="stats-wrapper">
+        <h3>SATK</h3>
+        <h3>{{pokemon.stats[3].base_stat}}</h3>
+        <div class="progressBar">
+          <div class="percent">
+            <div class="progress backgroundColor" style="width: {{pokemon.stats[3].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="stats-wrapper">
-      <h3>SDEF</h3>
-      <h3>{{pokemon.stats[4].base_stat}}</h3>
-      <div class="progressBar">
-        <div class="percent">
-          <div class="progress backgroundColor" style="width: {{pokemon.stats[4].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+      <div class="stats-wrapper">
+        <h3>SDEF</h3>
+        <h3>{{pokemon.stats[4].base_stat}}</h3>
+        <div class="progressBar">
+          <div class="percent">
+            <div class="progress backgroundColor" style="width: {{pokemon.stats[4].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="stats-wrapper">
-      <h3>SPD</h3>
-      <h3>{{pokemon.stats[5].base_stat}}</h3>
-      <div class="progressBar">
-        <div class="percent">
-          <div class="progress backgroundColor" style="width: {{pokemon.stats[5].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+      <div class="stats-wrapper">
+        <h3>SPD</h3>
+        <h3>{{pokemon.stats[5].base_stat}}</h3>
+        <div class="progressBar">
+          <div class="percent">
+            <div class="progress backgroundColor" style="width: {{pokemon.stats[5].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  <!--div class="sideInfos">
+    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Type</h1>
+    <p *ngFor="let type of pokemon.types">{{type.type.name}}</p>
+    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Weight</h1>
+    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Height</h1>
+    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Gender</h1>
+    <div class="genderBox">
+      <div class="maleBox">
+        <h2>Male</h2>
+        <p>{{getPokemonMaleRate()}}</p>
+      </div>
+      <div class="femaleBox">
+        <h2>Female</h2>
+        <p>{{getPokemonFemaleRate()}}</p>
+      </div>
+    </div>
+  </div-->
 </div>
