bugfix ui +sorting moves on pokemon detail

--- a/pokedex/src/app/navbar/navbar.component.html
+++ b/pokedex/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       <li><a href="home">Home</a></li>
       <li><a href="pokedex">Pokedex</a></li>
       <li><a href="item">Items</a></li>
-      <li><a>Dropdown <b>▼</b></a>
+      <!--li><a>Dropdown <b>▼</b></a>
         <ul>
           <li><a href="#">Dopdown1</a></li>
           <li><a href="#">Dopdown2</a></li>
@@ -20,7 +20,7 @@
           <li><a href="#">Dopdown2</a></li>
           <li><a href="#">Dopdown3</a></li>
         </ul>
-      </li>
+      </li-->
     </ul>
   </nav>
 </header>
