--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-move-tab/pokemon-move-tab.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-move-tab/pokemon-move-tab.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngFor="let move of pokemon.moves">
+<div class="container" *ngFor="let move of getSortedPokemonMove()">
   <div class="moveListItem">
     <p>{{move.move.name}}</p>
     <p>Lvl : {{move.version_group_details[move.version_group_details.length-1].level_learned_at}}</p>
