--- a/pokedex/src/app/item/item.component.html
+++ b/pokedex/src/app/item/item.component.html
@@ -16,6 +16,8 @@
     </div>
   </div>
 
-  <div *ngIf="isLoading">Loading...</div>
+  <!--div *ngIf="isLoading">Loading...</div-->
+
+  <app-item-detail *ngIf="displayDetail" app-item-detail></app-item-detail>
 
 </div>
