--- a/pokedex/src/app/item/item-detail/item-detail.component.html
+++ b/pokedex/src/app/item/item-detail/item-detail.component.html
@@ -1,1 +1,17 @@
 <div class="modal" (click)="hideDetailWindow()"></div>
+
+
+<div class="content" *ngIf="item.name">
+  <div class="card">
+    <span class="close" (click)="hideDetailWindow()">&times;</span>
+    <div class="content">
+      <div class="imgBxLogo"><img src="assets/images/logoPokeball.png" ></div>
+      <h2>{{item.name}}</h2>
+      <div class="imgBx"><img [src]="item.sprites.default" alt="{{item.name}}"></div>
+      <div class="contentBx">
+        <p>{{getPokemonFlavorText()}}</p>
+      </div>
+    </div>
+  </div>
+
+</div>
