--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.scss
@@ -47,7 +47,7 @@ $white    : #F5F5F5;
   display: flex;
   flex-direction: column;
 }
-.spritesBox .normalSpriteBox .spriteBox h3, .spritesBox .shinySpriteBox .spriteBox h3
+.spritesBox .normalSpriteBox .spriteBox p, .spritesBox .shinySpriteBox .spriteBox p
 {
   text-align: center;
 }
